# rust-actix-web-diesel-rest-api-example

./: .env  Cargo.toml
migrations/2020-09-14-173340_init/: up.sql
src/: main.rs  models.rs  schema.rs
src/handler/: index.rs  mod.rs  user.rs
src/repository/: user.rs
