[package]
name = "rust-actix-web-diesel-rest-api-example"
version = "0.1.0"
authors = ["Wojciech Zurek <mail@wojciechzurek.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.7"
log = "0.4"
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
r2d2 = "0.8.9"
chrono = { version = "0.4.15", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }